--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0"
   },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
+  },
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
@@ -25,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "prettier": "2.5.1",
     "typescript": "4.5.5"
   }
