--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
