--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,10 @@
       {
         "ssr": true
       }
-    ]
+    ],
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ],
   "presets": ["next/babel", "@babel/preset-typescript"]
 }
